nginx-2-networkpolicy.yaml
# ~/nginx-2-networkpolicy.yaml 
apiVersion: p# ~/nginx-2-networkpolicy.yaml 
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: nginx-2-networkpolicy 
spec: 
  podSelector: 
    matchLabels: 
      app: nginx-2 # Applies to which pod 
  policyTypes: 
  - Ingress 
  ingress: 
  - from: 
    - podSelector: 
        matchLabels: 
          app: nginx-1 # Allow calls from which pod 
    ports: 
    - protocol: TCP 
      port: 80
